Fixed title alignment

--- a/module-2-solution/css/style.css
+++ b/module-2-solution/css/style.css
@@ -1,14 +1,14 @@
+/*Base style rules*/
 *{
   font-family: "Comic Sans MS", sans-serif;
   box-sizing:border-box;
 }
 
 h1 {
-  width: 200px;
   margin-top: 30px;
   font-size: 175%;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  text-align: center;
 }
 
 div{
@@ -50,8 +50,7 @@ section>h2{
   background-color: #fff0b3;
 }
 
-
-
+/*Device specific style rules*/
 @media (min-width:992px){
   .col-lg-4{
     width: 33.33%;
@@ -71,5 +70,4 @@ section>h2{
   .col-md-12{
       width: 100%;
   }
-
 }
